--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "serve public",
     "build": "tsc",
-    "build:dev": "tsc --watch"
+    "build:dev": "tsc --watch",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "typescript": "^5.8.2",
-    "serve": "^14.2.4"
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "husky": "^9.1.7",
+    "serve": "^14.2.4",
+    "typescript": "^5.8.2"
   }
 }
