--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "serve public",
     "build": "tsc",
     "build:dev": "tsc --watch",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest",
+    "test:dev": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,11 @@
     "@commitlint/config-conventional": "^19.8.0",
     "husky": "^9.1.7",
     "serve": "^14.2.4",
-    "typescript": "^5.8.2"
+    "@types/jest": "^29.5.14",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.3.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2",
+    "jsdom": "^26.0.0"
   }
 }
