--- a/package.json
+++ b/package.json
@@ -18,13 +18,19 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "husky": "^9.1.7",
-    "serve": "^14.2.4",
+    "@eslint/js": "^9.23.0",
     "@types/jest": "^29.5.14",
+    "eslint": "^9.23.0",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.0.0",
+    "lint-staged": "^15.5.0",
+    "prettier": "3.5.3",
+    "serve": "^14.2.4",
     "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
-    "jsdom": "^26.0.0"
+    "typescript-eslint": "^8.28.0"
   }
 }
