--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "serve public",
     "build": "tsc",
     "build:dev": "tsc --watch",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest",
+    "test:dev": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +18,15 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
+    "@types/jest": "^29.5.14",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.0.0",
     "serve": "^14.2.4",
+    "ts-jest": "^29.3.0",
+    "ts-jest-resolver": "^2.0.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
 }
