--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "tsc --watch",
     "prepare": "husky",
     "test": "jest",
-    "test:dev": "jest --watchAll"
+    "test:dev": "jest --watchAll",
     "prepare": "husky",
     "test": "jest",
     "test:dev": "jest --watchAll"
