Change entities advisesTo type notation

--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "build:dev": "tsc --watch",
     "prepare": "husky",
     "test": "jest",
-    "test:dev": "jest --watchAll",
-    "prepare": "husky",
-    "test": "jest",
     "test:dev": "jest --watchAll"
   },
   "keywords": [],
@@ -22,15 +19,17 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/js": "^9.23.0",
+    "@types/jest": "^29.5.14",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
-    "serve": "^14.2.4",
-    "@types/jest": "^29.5.14",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.0.0",
+    "prettier": "3.5.3",
+    "serve": "^14.2.4",
     "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
-    "jsdom": "^26.0.0"
+    "typescript-eslint": "^8.28.0"
   }
 }
