--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.28.0"
+    "typescript-eslint": "^8.28.0",
+    "ts-jest-resolver": "^2.0.1"
   }
 }
